ReSharper.FSharp/test/data/parsing/errors/Expr - Unfinished after dot 02.fs
module Module

(1 + 1).
